# LVGLEx

./: .gitignore  .gitmodules  CMakeLists.txt
include/LVGLEx/: LVGLEx.h  application.h  font.h  logs.h  obj_global.h  obj_pointer.h  window.h
include/LVGLEx/container/: layer.h  window.h
include/LVGLEx/core/: application.h
include/LVGLEx/draw/: layer.h
include/LVGLEx/misc/: area.h  matrix.h  point.h  style.h
include/LVGLEx/object/: widget_base.h
include/LVGLEx/widget/: button.h  group_box.h  label.h  widget_base.h  widget_event_base.h
include/LVGLEx/widget_lvgl/: group_box.h
privately/: global_def.h  lv_conf_template.h.in  spinlock.h
src/application/: initialize.cpp  task.cpp
src/container/: layer.cpp
src/container/window/: window.cpp  windows_base.cpp
src/container/window/window_hook/: sys_windows.cpp  window_sdl.cpp
src/core/application/: initialize.cpp  task.cpp
src/draw/: layer.cpp
src/help/: obj.cpp
src/misc/: area.cpp  matrix.cpp  point.cpp  style.cpp
src/object/: base.cpp  event.cpp  obj_pointer.cpp  widget_event_base.cpp
src/resources/font/: font.cpp
src/widget/: base.cpp  button.cpp  label.cpp  obj_pointer.cpp  widget_event_base.cpp
src/widget_lvgl/: group_box.cpp
src/window/: window.cpp  windows_base.cpp
src/window/window_hook/: sys_windows.cpp  window_hook.h  window_private_def.h  window_sdl.cpp
test/: CMakeLists.txt
test/helloworld/: main.cpp
